--- a/style.css
+++ b/style.css
@@ -1,149 +1,276 @@
 .desktop {
-    background-color: #f5f5f5;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-  }
-  
-  .desktop .div {
-    background-color: #f5f5f5;
-    overflow: hidden;
-    width: 1440px;
-    height: 2117px;
-    position: relative;
-  }
-  
-  .desktop .overlap {
-    position: absolute;
-    width: 356px;
-    height: 92px;
-    top: 29px;
-    left: 0;
-  }
-  
-  .desktop .screenshot {
-    position: absolute;
-    width: 196px;
-    height: 92px;
-    top: 0;
-    left: 0;
-    object-fit: cover;
-  }
-  
-  .desktop .FLOWPAL {
-    position: absolute;
-    width: 251px;
-    top: -20px;
-    left: 107px;
-    font-family: "Nunito-Bold", Helvetica;
-    font-weight: 700;
-    color: transparent;
-    font-size: 44px;
-    letter-spacing: 5.28px;
-    line-height: normal;
-  }
-  
-  .desktop .text-wrapper {
-    color: #333333;
-    transition:transform .5s;
-  }
+  background-color: #f5f5f5;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+}
 
-  .desktop .text-wrapper a:hover::after {
-    transform: scaleX(1);
-  }
-  
-  .desktop .span {
-    position: absolute;
-    letter-spacing: 5.28px;
-    color: #ff66b2;
-  }
-  
-  .desktop .ellipse {
-    position: absolute;
-    width: 723px;
-    height: 958px;
-    top: 1161px;
-    left: 1172px;
-    border-radius: 361.33px/478.99px;
-    background: radial-gradient(50% 50% at 50% 50%, rgb(255, 102, 178) 0%, rgba(255, 102, 178, 0) 100%);
-  }
-  
-  .desktop .text-wrapper-2 {
-    position: absolute;
-    top: 57px;
-    left: 791px;
-    font-family: "Montserrat-Regular", Helvetica;
-    font-weight: 400;
-    color: #333333;
-    font-size: 24px;
-    letter-spacing: 0;
-    line-height: normal;
-  }
-  
-  .desktop .text-wrapper-3 {
-    position: absolute;
-    top: 57px;
-    left: 894px;
-    font-family: "Montserrat-Regular", Helvetica;
-    font-weight: 400;
-    color: #333333;
-    font-size: 24px;
-    letter-spacing: 0;
-    line-height: normal;
-  }
-  
-  .desktop .text-wrapper-4 {
-    position: absolute;
-    top: 57px;
-    left: 998px;
-    font-family: "Montserrat-Regular", Helvetica;
-    font-weight: 400;
-    color: #333333;
-    font-size: 24px;
-    letter-spacing: 0;
-    line-height: normal;
-  }
-  
-  .desktop .text-wrapper-5 {
-    position: absolute;
-    top: 57px;
-    left: 1126px;
-    font-family: "Montserrat-Regular", Helvetica;
-    font-weight: 400;
-    color: #333333;
-    font-size: 24px;
-    letter-spacing: 0;
-    line-height: normal;
-  }
-  
-  .desktop .overlap-group {
-    position: absolute;
-    width: 57px;
-    height: 52px;
-    top: 46px;
-    left: 1223px;
-    background-color: #f5f5f5;
-    border-radius: 28.74px/25.84px;
-    border: 4px solid;
-    border-color: #ff66b2;
-  }
-  
-  .desktop .ellipse-2 {
-    position: absolute;
-    width: 19px;
-    height: 19px;
-    top: 7px;
-    left: 15px;
-    background-color: #ff66b2;
-    border-radius: 9.38px/9.36px;
-  }
-  
-  .desktop .img {
-    position: absolute;
-    width: 32px;
-    height: 16px;
-    top: 27px;
-    left: 9px;
-  }
-  
+.desktop .div {
+  background-color: #f5f5f5;
+  overflow: hidden;
+  width: 1440px;
+  height: 1654px;
+  position: relative;
+}
+
+.desktop .overlap {
+  position: absolute;
+  width: 356px;
+  height: 92px;
+  top: 29px;
+  left: 0;
+}
+
+.desktop .screenshot {
+  position: absolute;
+  width: 196px;
+  height: 92px;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+}
+
+.desktop .FLOWPAL {
+  position: absolute;
+  width: 251px;
+  top: 16px;
+  left: 105px;
+  font-family: "Nunito-Bold", Helvetica;
+  font-weight: 700;
+  color: transparent;
+  font-size: 44px;
+  letter-spacing: 5.28px;
+  line-height: normal;
+}
+
+.desktop .text-wrapper {
+  color: #333333;
+}
+
+.desktop .span {
+  color: #ff66b2;
+}
+
+.desktop .overlap-group {
+  position: absolute;
+  width: 1440px;
+  height: 294px;
+  top: 1403px;
+  left: 0;
+  background-color: #ff66b2;
+}
+
+.desktop .text-wrapper-2 {
+  position: absolute;
+  top: 56px;
+  left: 160px;
+  font-family: "Montserrat-Bold", Helvetica;
+  font-weight: 700;
+  color: #f5f5f5;
+  font-size: 24px;
+  letter-spacing: 0;
+  line-height: normal;
+}
+
+.desktop .text-wrapper-3 {
+  position: absolute;
+  top: 56px;
+  left: 331px;
+  font-family: "Montserrat-Bold", Helvetica;
+  font-weight: 700;
+  color: #f5f5f5;
+  font-size: 24px;
+  letter-spacing: 0;
+  line-height: normal;
+}
+
+.desktop .text-wrapper-4 {
+  position: absolute;
+  top: 106px;
+  left: 160px;
+  font-family: "Montserrat-Bold", Helvetica;
+  font-weight: 700;
+  color: #f5f5f5;
+  font-size: 24px;
+  letter-spacing: 0;
+  line-height: normal;
+}
+
+.desktop .element-flowpal-all {
+  position: absolute;
+  top: 146px;
+  left: 846px;
+  font-family: "Montserrat-Bold", Helvetica;
+  font-weight: 700;
+  color: #f5f5f5;
+  font-size: 24px;
+  letter-spacing: 0;
+  line-height: normal;
+}
+
+.desktop .text-wrapper-5 {
+  position: absolute;
+  top: 106px;
+  left: 329px;
+  font-family: "Montserrat-Bold", Helvetica;
+  font-weight: 700;
+  color: #f5f5f5;
+  font-size: 24px;
+  letter-spacing: 0;
+  line-height: normal;
+}
+
+.desktop .text-wrapper-6 {
+  position: absolute;
+  top: 106px;
+  left: 424px;
+  font-family: "Montserrat-Bold", Helvetica;
+  font-weight: 700;
+  color: #f5f5f5;
+  font-size: 24px;
+  letter-spacing: 0;
+  line-height: normal;
+}
+
+.desktop .text-wrapper-7 {
+  position: absolute;
+  top: 106px;
+  left: 521px;
+  font-family: "Montserrat-Bold", Helvetica;
+  font-weight: 700;
+  color: #f5f5f5;
+  font-size: 24px;
+  letter-spacing: 0;
+  line-height: normal;
+}
+
+.desktop .text-wrapper-8 {
+  position: absolute;
+  top: 106px;
+  left: 645px;
+  font-family: "Montserrat-Bold", Helvetica;
+  font-weight: 700;
+  color: #f5f5f5;
+  font-size: 24px;
+  letter-spacing: 0;
+  line-height: normal;
+}
+
+.desktop .overlap-2 {
+  position: absolute;
+  width: 1641px;
+  height: 1089px;
+  top: 313px;
+  left: 160px;
+}
+
+.desktop .ellipse {
+  position: absolute;
+  width: 746px;
+  height: 1088px;
+  top: 1px;
+  left: 896px;
+  border-radius: 372.84px/544.23px;
+  background: radial-gradient(50% 50% at 50% 50%, rgb(255, 102, 178) 0%, rgba(255, 102, 178, 0) 100%);
+}
+
+.desktop .cup {
+  position: absolute;
+  width: 646px;
+  height: 993px;
+  top: 73px;
+  left: 634px;
+  object-fit: cover;
+}
+
+.desktop .empowering-your {
+  position: absolute;
+  width: 693px;
+  top: 0;
+  left: 0;
+  font-family: "Montserrat-Bold", Helvetica;
+  font-weight: 700;
+  color: #333333;
+  font-size: 74px;
+  letter-spacing: 0;
+  line-height: normal;
+}
+
+.desktop .text-wrapper-9 {
+  position: absolute;
+  top: 57px;
+  left: 791px;
+  font-family: "Montserrat-Regular", Helvetica;
+  font-weight: 400;
+  color: #333333;
+  font-size: 24px;
+  letter-spacing: 0;
+  line-height: normal;
+}
+
+.desktop .text-wrapper-10 {
+  position: absolute;
+  top: 57px;
+  left: 894px;
+  font-family: "Montserrat-Regular", Helvetica;
+  font-weight: 400;
+  color: #333333;
+  font-size: 24px;
+  letter-spacing: 0;
+  line-height: normal;
+}
+
+.desktop .text-wrapper-11 {
+  position: absolute;
+  top: 57px;
+  left: 998px;
+  font-family: "Montserrat-Regular", Helvetica;
+  font-weight: 400;
+  color: #333333;
+  font-size: 24px;
+  letter-spacing: 0;
+  line-height: normal;
+}
+
+.desktop .text-wrapper-12 {
+  position: absolute;
+  top: 57px;
+  left: 1126px;
+  font-family: "Montserrat-Regular", Helvetica;
+  font-weight: 400;
+  color: #333333;
+  font-size: 24px;
+  letter-spacing: 0;
+  line-height: normal;
+}
+
+.desktop .overlap-3 {
+  position: absolute;
+  width: 57px;
+  height: 52px;
+  top: 46px;
+  left: 1223px;
+  background-color: #f5f5f5;
+  border-radius: 28.74px/25.84px;
+  border: 4px solid;
+  border-color: #ff66b2;
+}
+
+.desktop .ellipse-2 {
+  position: absolute;
+  width: 19px;
+  height: 19px;
+  top: 7px;
+  left: 15px;
+  background-color: #ff66b2;
+  border-radius: 9.38px/9.36px;
+}
+
+.desktop .img {
+  position: absolute;
+  width: 32px;
+  height: 16px;
+  top: 27px;
+  left: 9px;
+}
