--- a/source-code/style.css
+++ b/source-code/style.css
@@ -50,7 +50,7 @@ nav .logo{
   color: #ff66b2;
   font-family: 'Nunito-Bold', Helvetica;
   font-style: bold;
-  font-size: 44px;
+  font-size: 50px;
   letter-spacing: 5.28px;
   width: 251px;
   height: 73px;
@@ -72,8 +72,8 @@ nav .logo{
 
 .header-text h1{
   font-family: 'Nunito-Bold', Helvetica;
-  font-style: bold;
-  font-size: 44px;
+  /* font-style: bold; */
+  font-size: 50px;
   letter-spacing: 5.28px;
   margin-top: -89px;
   width: 251px;
@@ -168,7 +168,7 @@ nav{
 
 /* tag */
 nav ul{
-  margin-top: -100px;
+  margin-top: -90px;
   float: right;
   margin-right: 20px;
 }
@@ -177,6 +177,7 @@ nav ul li{
   display: inline-block;
   line-height: 80px;
   margin: 0 5px;
+  /* font-family: 'Montserrat', Helvetica; */
   /* list-style: none;
   margin: 0 5px;
   margin-top: -400px; */
@@ -186,6 +187,7 @@ nav ul li a{
   text-decoration: none;
   color: #333333;
   text-transform: uppercase;
+  font-size: 22px;
 }
 
 nav ul li a:active, nav ul li a:hover{
@@ -218,12 +220,14 @@ nav ul li a:active, nav ul li a:hover{
 
 .about-left-col img{
   flex-basis: 100%;
+  margin-left: 100px;
 }
 
 .about-right-col{
-  flex-basis: 50%;
+  flex-basis: 40%;
   text-align: right;
   margin-top: 150px;
+  margin-left: 100px;
 }
 
 .about-text{
@@ -318,11 +322,11 @@ nav ul li a:active, nav ul li a:hover{
 }
 
 .blogs-right-col img{
-  width: 100%;
+  width: 90%;
 }
 
 .blogs-left-col{
-  flex-basis: 50%;
+  flex-basis: 40%;
 }
 
 .blogs-text{
@@ -482,3 +486,71 @@ hr{
       background-image: none;
   }
 } */
+
+form #contact-text{
+  width: 500px;
+  height: 80px;
+}
+
+.tracker-body{
+  margin-top: 200px;
+  margin-left: 350px;
+  text-align: center;
+  width: 693px;
+  font-weight: 700;
+  color: #333333;
+  font-size: 74px;
+  letter-spacing: 0;
+}
+
+.tracker-body #span1{
+  color:#ff66b2;
+}
+
+.blog p{
+  margin-top: 150px;
+  text-align: center;
+}
+
+.blog h1{
+  margin-left: 100px;
+  margin-right: 100px;
+  font-size: 24px;
+}
+
+.blog .ans{
+  margin-left: 100px;
+  margin-right: 100px;
+  font-size: 18px;
+  padding: 10px;
+}
+
+.blog h2{
+  margin-left: 130px;
+  margin-right: 100px;
+  font-size: 18px;
+}
+
+.blog .sub-ans{
+  margin-left: 130px;
+  margin-right: 100px;
+  font-size: 18px;
+  padding: 10px;
+}
+
+.blog .tips{
+  text-align: center;
+  padding: 10px;
+  border: 2px;
+  border-style: dashed;
+  font-size: 18px;
+}
+
+.blog .title{
+  text-align: center;
+  padding: 10px;
+  border: 2px;
+  border-style: dashed;
+  background-color: #ff66b2;
+  color: white;
+}
