--- a/source-code/style.css
+++ b/source-code/style.css
@@ -1,148 +1,147 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'Montserrat', Helvetica;
-    font-weight: 700;
-    text-decoration: none;
-    list-style: none;
-    box-sizing: border-box;
-    color: #333333;
-    font-size: 27px;
-    letter-spacing: 0px;
-    line-height: normal;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Montserrat", Helvetica;
+  font-weight: 700;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
+  color: #333333;
+  font-size: 27px;
+  letter-spacing: 0px;
+  line-height: normal;
 }
 
-button:hover{
-    background-color: #ff66b2;
-    color: white;
+button:hover {
+  background-color: #ff66b2;
+  color: white;
 }
 
-body{
-    background-color: #f5f5f5;
+body {
+  background-color: #f5f5f5;
 }
 
-p{
-    font-size: 15px;
-    line-height: 18px;
-    color: #333;
+p {
+  font-size: 15px;
+  line-height: 18px;
+  color: #333;
 }
 
-#header{
-    height: 100vh;
-    background-image: url(/assets/cup2.png);
-    background-position: right;
-    background-size: 25%;
-    background-repeat: no-repeat;
+#header {
+  height: 100vh;
+  background-image: url(/assets/cup2.png);
+  background-position: right;
+  background-size: 25%;
+  background-repeat: no-repeat;
 }
 
-nav .container{  /*class*/
-    margin-right: 0px;
-    margin-left: 0px;
+nav .container {
+  /*class*/
+  margin-right: 0px;
+  margin-left: 0px;
 }
 
-nav .logo{
-    margin-top: -5px;
-    width: 250px;
-    position: flex;
+nav .logo {
+  margin-top: -5px;
+  width: 250px;
+  position: flex;
 }
 
 .span {
-    color: #ff66b2;
-    font-family: 'Nunito-Bold', Helvetica;
-    font-style: bold;
-    font-size: 50px;
-    letter-spacing: 5.28px;
-    width: 251px;
-    height: 73px;
-    outline-color: #333333;
-    position: flex;
+  color: #ff66b2;
+  font-family: "Nunito-Bold", Helvetica;
+  font-style: bold;
+  font-size: 50px;
+  letter-spacing: 5.28px;
+  width: 251px;
+  height: 73px;
+  outline-color: #333333;
+  position: flex;
 }
 
-.header-text{
-    max-width: 350px;
-    margin-top: -75px;
-    margin-left: 135px;
-    
+.header-text {
+  max-width: 350px;
+  margin-top: -75px;
+  margin-left: 135px;
 }
 
-.header-text button{
-    margin-top: 20px;
-    margin-bottom: 60px;
+.header-text button {
+  margin-top: 20px;
+  margin-bottom: 60px;
 }
 
-.header-text h1{
-    font-family: 'Nunito-Bold', Helvetica;
-    /* font-style: bold; */
-    font-size: 50px;
-    letter-spacing: 5.28px;
-    margin-top: -89px;
-    width: 251px;
-    height: 73px;
-    outline-color: #333333;
-    position: flex;
+.header-text h1 {
+  font-family: "Nunito-Bold", Helvetica;
+  /* font-style: bold; */
+  font-size: 50px;
+  letter-spacing: 5.28px;
+  margin-top: -89px;
+  width: 251px;
+  height: 73px;
+  outline-color: #333333;
+  position: flex;
 }
 
-.body-text{
-    margin-top: 10px;
-    margin-left: 200px;
-    position: absolute;
-    width: 693px;
-    font-weight: 700;
-    color: #333333;
-    font-size: 74px;
-    letter-spacing: 0;
+.body-text {
+  margin-top: 10px;
+  margin-left: 200px;
+  position: absolute;
+  width: 693px;
+  font-weight: 700;
+  color: #333333;
+  font-size: 74px;
+  letter-spacing: 0;
 }
 
-.body-text h1{
-    font-size: 74px;
-    padding: 0px;
-    letter-spacing: 0px;
+.body-text h1 {
+  font-size: 74px;
+  padding: 0px;
+  letter-spacing: 0px;
 }
 
-.square{
-    height: 12px;
-    width: 12px;
-    display: inline-block;
-    background-color: #ff66b2;
-    margin: 15px 0;
+.square {
+  height: 12px;
+  width: 12px;
+  display: inline-block;
+  background-color: #ff66b2;
+  margin: 15px 0;
 }
 
-.common-btn{
-    padding: 18px 40px;
-    background: transparent;
-    outline: none;
-    border: 2px solid #ff66b2;
-    font-weight: bold;
-    cursor: pointer;
+.common-btn {
+  padding: 18px 40px;
+  background: transparent;
+  outline: none;
+  border: 2px solid #ff66b2;
+  font-weight: bold;
+  cursor: pointer;
 }
 
-.body-text .common-btn{
-    margin-top: 20px;
-    margin-bottom: 60px;
-    
+.body-text .common-btn {
+  margin-top: 20px;
+  margin-bottom: 60px;
 }
 
-.line1{
-    width: 15px;
-    height: 15px;
-    background: #ff66b2;
-    display: inline-block;
+.line1 {
+  width: 15px;
+  height: 15px;
+  background: #ff66b2;
+  display: inline-block;
 }
-.line2{
-    width: 80px;
-    height: 1px;
-    background: #ff66b2;
-    display: inline-block;
+.line2 {
+  width: 80px;
+  height: 1px;
+  background: #ff66b2;
+  display: inline-block;
 }
-.line3{
-    width: 60px;
-    height: 1px;
-    background: #ff66b2;
-    display: inline-block;
+.line3 {
+  width: 60px;
+  height: 1px;
+  background: #ff66b2;
+  display: inline-block;
 }
 
-.line{
-    line-height: 8px;
+.line {
+  line-height: 8px;
 }
 
 /*nav{ 
@@ -160,80 +159,80 @@ nav .logo{
     
 }*/
 
-nav{
-    height: 50px;
-    bottom: 50px;
-    width: 100%;
+nav {
+  height: 50px;
+  bottom: 50px;
+  width: 100%;
 }
 
 /* tag */
-nav ul{
-    margin-top: -90px;
-    float: right;
-    margin-right: 20px;
+nav ul {
+  margin-top: -90px;
+  float: right;
+  margin-right: 20px;
 }
 
-nav ul li{ 
-    display: inline-block;
-    line-height: 80px;
-    margin: 0 5px;
-    /* font-family: 'Montserrat', Helvetica; */
-    /* list-style: none;
+nav ul li {
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
+  /* font-family: 'Montserrat', Helvetica; */
+  /* list-style: none;
     margin: 0 5px;
     margin-top: -400px; */
 }
 
-nav ul li a{
-    text-decoration: none;
-    color: #333333;
-    text-transform: uppercase;
-    font-size: 22px;
+nav ul li a {
+  text-decoration: none;
+  color: #333333;
+  text-transform: uppercase;
+  font-size: 22px;
 }
 
-nav ul li a:active, nav ul li a:hover{
-    color: #ff66b2;
-    transition: 0.5s;
+nav ul li a:active,
+nav ul li a:hover {
+  color: #ff66b2;
+  transition: 0.5s;
 }
 
-#menu-btn{
-    width: 50px;
-    position: fixed;
-    right: 20px;
-    top: 35px;
-    z-index: 2;
-    cursor: pointer;
+#menu-btn {
+  width: 50px;
+  position: fixed;
+  right: 20px;
+  top: 35px;
+  z-index: 2;
+  cursor: pointer;
 }
 
 /*About*/
 
-#about{
-    
-    padding: 100px 0;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
+#about {
+  padding: 100px 0;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
-.about-left-col{
-    flex-basis: 50%;
+.about-left-col {
+  flex-basis: 50%;
 }
 
-.about-left-col img{
-    flex-basis: 100%;
-    margin-left: 100px;
+.about-left-col img {
+  flex-basis: 100%;
+  margin-left: 100px;
 }
 
-.about-right-col{
-    flex-basis: 40%;
-    text-align: right;
-    margin-top: 150px;
-    margin-left: 100px;
+.about-right-col {
+  flex-basis: 40%;
+  text-align: right;
+  margin-top: 150px;
+  margin-left: 100px;
 }
 
-.about-text{
-    max-width: 500px;
-    margin-right: 100px;
-    display: inline-block;
+.about-text {
+  max-width: 500px;
+  margin-right: 100px;
+  display: inline-block;
 }
 
 /* .about-text h1{
@@ -241,227 +240,230 @@ nav ul li a:active, nav ul li a:hover{
     background-position: 110%;
 } */
 
-.about-text button{
-    margin-top: 20px;
-    margin-bottom: 60px;
-    /* margin-right: 100px; */
+.about-text button {
+  margin-top: 20px;
+  margin-bottom: 60px;
+  /* margin-right: 100px; */
 }
 
-.about-text h2{
-    margin: 50px 0 10px;
-    font-size: 28px;
-    font-style: italic;
+.about-text h2 {
+  margin: 50px 0 10px;
+  font-size: 28px;
+  font-style: italic;
 }
 
-.about-text h3{
-    font-size: 20px;
-    font-style: italic;
-    color: #797979;
+.about-text h3 {
+  font-size: 20px;
+  font-style: italic;
+  color: #797979;
 }
 
 /* services */
 
-#services{
-    padding: 100px 0;
+#services {
+  padding: 100px 0;
 }
 
-.services-row{
-    width: 80%;
-    margin: auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    flex-wrap: wrap;
+.services-row {
+  width: 80%;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
-.services-col{
-    flex-basis: 25%;
-    text-align: center;
+.services-col {
+  flex-basis: 25%;
+  text-align: center;
 }
 
-.services-col img{
-    width: 100px;
+.services-col img {
+  width: 100px;
 }
 
-.services-col h4{
-    margin-bottom: 15px;
-    font-size: 20px;
-    font-weight: 400;
+.services-col h4 {
+  margin-bottom: 15px;
+  font-size: 20px;
+  font-weight: 400;
 }
 
-.services-btn{
-    margin: 80px;
-    /* margin-left: 465px; */
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
+.services-btn {
+  margin: 80px;
+  /* margin-left: 465px; */
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
 }
 
-.services-row .line{
-    text-align: center;
-    display: inline-block;
-    margin-right: 25px;
+.services-row .line {
+  text-align: center;
+  display: inline-block;
+  margin-right: 25px;
 }
 
 /* Blogs */
 
-#blogs{
-    padding: 100px 0;
-    flex-wrap: wrap;
-    margin-left: 200px;
+#blogs {
+  padding: 100px 0;
+  flex-wrap: wrap;
+  margin-left: 200px;
 }
 
-.blogs-row{
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
+.blogs-row {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
-.blogs-right-col{
-    flex-basis: 50%;
+.blogs-right-col {
+  flex-basis: 50%;
 }
 
-.blogs-right-col img{
-    width: 90%;
+.blogs-right-col img {
+  width: 90%;
 }
 
-.blogs-left-col{
-    flex-basis: 40%;
+.blogs-left-col {
+  flex-basis: 40%;
 }
 
-.blogs-text{
-    max-width: 350px;
+.blogs-text {
+  max-width: 350px;
 }
 
-.blogs-text button{
-    margin: 30px 0;
-
+.blogs-text button {
+  margin: 30px 0;
 }
 
 /* contact */
 
-#contact{
-    padding: 100px 0;
-    flex-wrap: wrap;
-    margin-left: 200px;
+#contact {
+  padding: 100px 0;
+  flex-wrap: wrap;
+  margin-left: 200px;
 }
 
-.contact-row{
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
+.contact-row {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
-
-.contact-left-col, .contact-right-col{
-    flex-basis: 50%;
+.contact-left-col,
+.contact-right-col {
+  flex-basis: 50%;
 }
 
-.contact-right-col img{
-    width: 100%;
+.contact-right-col img {
+  margin-bottom: 40px;
+  margin-left: 40px;
+  height: 30%;
+  width: 30%;
 }
 
-form{
-    max-width: 350px;
-    margin: 30px 0;
+form {
+  max-width: 350px;
+  margin: 30px 0;
 }
 
-form input{
-    width: 500px;
-    padding: 12px 10px;
-    margin-bottom: 5px;
-    outline: none;
-    box-shadow: none;
-    box-sizing: border-box;
-    border: 2px solid #ff66b2;
+form input {
+  width: 500px;
+  padding: 12px 10px;
+  margin-bottom: 5px;
+  outline: none;
+  box-shadow: none;
+  box-sizing: border-box;
+  border: 2px solid #ff66b2;
 }
 
-.common-btn1{
-    padding: 18px 40px;
-    background: transparent;
-    outline: none;
-    border: 2px solid #ff66b2;
-    font-weight: bold;
-    cursor: pointer;
-    margin-right: -220px;
-    width: 307px;
+.common-btn1 {
+  padding: 18px 40px;
+  background: transparent;
+  outline: none;
+  border: 2px solid #ff66b2;
+  font-weight: bold;
+  cursor: pointer;
+  margin-right: -220px;
+  width: 307px;
 }
 
 /* Footer */
 
-#footer{
-    padding: 50px 0 30px;
+#footer {
+  padding: 50px 0 30px;
 }
 
-hr{
-    width: 100%;
-    border: 0;
-    border-top: 1px solid #ff66b2;
+hr {
+  width: 100%;
+  border: 0;
+  border-top: 1px solid #ff66b2;
 }
 
-.footer-row{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
+.footer-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-.footer-left-col{
-        flex-basis: 50%;
-        margin-top: 60px;
+.footer-left-col {
+  flex-basis: 50%;
+  margin-top: 60px;
 }
 
-.footer-right-col{
-    flex-basis: 35%;
+.footer-right-col {
+  flex-basis: 35%;
 }
 
-.footer-links{
-    display: flex;
-    /* justify-content: space-between; */
-    flex-wrap: wrap;
+.footer-links {
+  display: flex;
+  /* justify-content: space-between; */
+  flex-wrap: wrap;
 }
 
-.link-title h4{
-    color: #ff66b2;
-    margin-bottom: 20px;
-    margin-left: 110px;
+.link-title h4 {
+  color: #ff66b2;
+  margin-bottom: 20px;
+  margin-left: 110px;
 }
 
-.link-title small{
-    color: #333;
-    font-size: 20px;
-    margin-left: 110px;
+.link-title small {
+  color: #333;
+  font-size: 20px;
+  margin-left: 110px;
 }
 
-.footer-info{
-    display: flex;
-    /* align-items: center; */
-    justify-content: space-between;
-    flex-wrap: wrap;
+.footer-info {
+  display: flex;
+  /* align-items: center; */
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-.footer-logo img{
-    width: 200px;
-    margin-left: 400px;
+.footer-logo img {
+  width: 200px;
+  margin-left: 400px;
 }
 
-.footer-logo button{
-    padding: 12px 38px;
-    margin-top: 20px;
-    font-size: 10px;
-    margin-left: 430px;
+.footer-logo button {
+  padding: 12px 38px;
+  margin-top: 20px;
+  font-size: 10px;
+  margin-left: 430px;
 }
 
-.copyright-text, .footer-logo{
-    flex-basis: 40%;
+.copyright-text,
+.footer-logo {
+  flex-basis: 40%;
 }
 
-.copyright-text{
-    margin-top: 100px;
-    margin-right: 300px;
-    /* margin-right: 75px; */
-    /* margin-left: 75px; */
-} 
+.copyright-text {
+  margin-top: 100px;
+  margin-right: 300px;
+  /* margin-right: 75px; */
+  /* margin-left: 75px; */
+}
 
 /* .to-top{
     background: transparent;
@@ -487,70 +489,70 @@ hr{
     }
 } */
 
-form #contact-text{
-    width: 500px;
-    height: 80px;
+form #contact-text {
+  width: 500px;
+  height: 80px;
 }
 
-.tracker-body{
-    margin-top: 200px;
-    margin-left: 350px;
-    text-align: center;
-    width: 693px;
-    font-weight: 700;
-    color: #333333;
-    font-size: 74px;
-    letter-spacing: 0;
+.tracker-body {
+  margin-top: 200px;
+  margin-left: 350px;
+  text-align: center;
+  width: 693px;
+  font-weight: 700;
+  color: #333333;
+  font-size: 74px;
+  letter-spacing: 0;
 }
 
-.tracker-body #span1{
-    color:#ff66b2;
+.tracker-body #span1 {
+  color: #ff66b2;
 }
 
-.blog p{
-    margin-top: 150px;
-    text-align: center;
+.blog p {
+  margin-top: 150px;
+  text-align: center;
 }
 
-.blog h1{
-    margin-left: 100px;
-    margin-right: 100px;
-    font-size: 24px;
+.blog h1 {
+  margin-left: 100px;
+  margin-right: 100px;
+  font-size: 24px;
 }
 
-.blog .ans{
-    margin-left: 100px;
-    margin-right: 100px;
-    font-size: 18px;
-    padding: 10px;
+.blog .ans {
+  margin-left: 100px;
+  margin-right: 100px;
+  font-size: 18px;
+  padding: 10px;
 }
 
-.blog h2{
-    margin-left: 130px;
-    margin-right: 100px;
-    font-size: 18px;
+.blog h2 {
+  margin-left: 130px;
+  margin-right: 100px;
+  font-size: 18px;
 }
 
-.blog .sub-ans{
-    margin-left: 130px;
-    margin-right: 100px;
-    font-size: 18px;
-    padding: 10px;
+.blog .sub-ans {
+  margin-left: 130px;
+  margin-right: 100px;
+  font-size: 18px;
+  padding: 10px;
 }
 
-.blog .tips{
-    text-align: center;
-    padding: 10px;
-    border: 2px;
-    border-style: dashed;
-    font-size: 18px;
+.blog .tips {
+  text-align: center;
+  padding: 10px;
+  border: 2px;
+  border-style: dashed;
+  font-size: 18px;
 }
 
-.blog .title{
-    text-align: center;
-    padding: 10px;
-    border: 2px;
-    border-style: dashed;
-    background-color: #ff66b2;
-    color: white;
+.blog .title {
+  text-align: center;
+  padding: 10px;
+  border: 2px;
+  border-style: dashed;
+  background-color: #ff66b2;
+  color: white;
 }
